# libvmi

./: .astylerc  .gitignore  .gitmodules  .indent.pro  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Makefile  Makefile.am  NEWS  README  README.rst  SECURITY.md  TODO  autogen.sh  configure.ac  libvmi.pc.autotools.in  libvmi.pc.in  runindent.py  runindent.sh  snapcraft.yaml  sonar-project.properties  xenaccess.pc.in
.github/: cmake_options.txt  configure_options.txt
.github/variables/: libkvmi_rev
.github/workflows/: astyle.yml  codeql.yml  compile.yml  container-compile.yml  make-deb.yml  scan-build-complexity.yml  scan-build.yml  whitespace.yml
cmake/modules/: DetectArchitecture.cmake  FindBddisasm.cmake  FindCheck.cmake  FindJSON-C.cmake  FindLIBVMI_REQUEST.cmake  FindLibkvmi.cmake  FindLibvirt.cmake  FindLibvmiRequest.cmake  FindXen.cmake  FindXenstore.cmake  StaticAnalysis.cmake
cmake/toolchains/: arm-gcc.cmake
debian/: changelog  control  copyright  libvmi-dev.install  libvmi.install  libvmi0.install  libvmi0.symbols  postinst  postrm  preinst  prerm  rules
doc/: CMakeLists.txt  doxyfile  doxyfile.in
etc/: libvmi-example.conf
examples/: CMakeLists.txt  Makefile.am  README.md  breakpoint-emulate-example.c  breakpoint-recoil-example.c  cpuid.c  cr3-event-example.c  cr3-load.c  descriptor-event-example.c  dmesg.c  dump-memory.c  event-example.c  fool-patchguard.c  interrupt-event-example.c  io-event-example.c  linux-offsets.c  map-addr.c  map-symbol.c  mem-event-example.c  memory-mapping-example.c  module-list.c  msr-event-example.c  new-physical-page-example.c  process-data.c  process-list-file.c  process-list.c  read-disk-example.c  rwmem.c  shm-snapshot-process-list.c  singlestep-event-example.c  step-event-example.c  step-memevent-example.c  switch-view-example.c  va-pages.c  wait-for-domain-example.c  win-guid.c  win-guid.h  win-offsets.c  win-proc-stat.c  xen-emulate-response.c
libvmi/: CMakeLists.txt  Makefile.am  accessors.c  cache.c  cache.h  config.h.in  convenience.c  core.c  debug.h  domain_info.c  elfparse.h  error.c  events.c  events.h  file.c  glib_compat.h  libtool_template.in  libvmi.h  libvmi.h.in  libvmi_extra.h  linux_core.c  linux_domain_info.c  linux_symbols.c  memory.c  msr-index.c  msr-index.h  peparse.h  performance.c  pretty_print.c  private.h  read.c  read.c.save  rekall.c  rekall.h  shm.c  shm.h  slat.c  slat.h  strmatch.c  symbols.c  (+16 more)
libvmi/arch/: amd64.c  amd64.h  arch_interface.c  arch_interface.h  arm_aarch32.c  arm_aarch32.h  arm_aarch64.c  arm_aarch64.h  ept.c  ept.h  intel.c  intel.h  x86.h
libvmi/config/: CMakeLists.txt  Makefile.am  config_parser.h  grammar.y  lexicon.l
libvmi/disk/: vbd.c  vbd.h  vbd_private.h
libvmi/driver/: CMakeLists.txt  driver_interface.c  driver_interface.h  driver_wrapper.h  file.c  file.h  interface.c  interface.h  kvm.c  kvm.h  memory_cache.c  memory_cache.h  xen.c  xen.h  xen_events.c  xen_events.h  xen_private.h
libvmi/driver/.deps/: interface.Plo  xen.Plo
libvmi/driver/bareflank/: CMakeLists.txt  bareflank.c  bareflank.h  bareflank_private.h  hypercall.S  hypercall.h
libvmi/driver/bareflank/bfsdk/: CMakeLists.txt
libvmi/driver/bareflank/bfsdk/include/: bfhypercall.h
libvmi/driver/bareflank/bfsdk/src/: intrinsics.S
libvmi/driver/file/: CMakeLists.txt  file.c  file.h  file_private.h
libvmi/driver/kvm/: CMakeLists.txt  README.md  kvm.c  kvm.h  kvm_common.c  kvm_events.c  kvm_events.h  kvm_legacy.c  kvm_private.h  kvm_shm.h  kvm_slat.c  kvm_slat.h  libkvmi.c  libkvmi_wrapper.c  libkvmi_wrapper.h  libvirt_wrapper.c  libvirt_wrapper.h
libvmi/driver/kvm/include/asm/: kvm.h  kvmi.h
libvmi/driver/kvm/include/kvmi/: libkvmi.h
libvmi/driver/kvm/include/linux/: kvm_para.h  kvmi.h
libvmi/driver/xen/: CMakeLists.txt  altp2m.c  altp2m_private.h  libxc_wrapper.c  libxc_wrapper.h  libxs_wrapper.c  libxs_wrapper.h  msr-index.h  vbd.c  vbd_private.h  xen.c  xen.h  xen_events.c  xen_events.h  xen_events_46.c  xen_events_48.c  xen_events_abi.h  xen_events_legacy.c  xen_events_private.h  xen_private.h  xs_events.h
libvmi/json_profiles/: json_profiles.c  json_profiles.h  rekall.c  rekall.h  volatility_ist.c  volatility_ist.h
libvmi/os/: CMakeLists.txt  os_interface.c  os_interface.h
libvmi/os/freebsd/: CMakeLists.txt  core.c  freebsd.h  memory.c  symbols.c
libvmi/os/linux/: CMakeLists.txt  core.c  domain_info.c  elfparse.c  linux.h  memory.c  symbols.c
libvmi/os/osx/: core.c  memory.c  osx.h  symbols.c  xnu.h
libvmi/os/windows/: CMakeLists.txt  core.c  kdbg.c  kernel.c  kernel.h  kpcr-autocode.py  kpcr.c  memory.c  peparse.c  peparse.h  process.c  symbols.c  unicode.c  windows.h
notes/: embedded-int3.c  events.txt  freebsd.txt  int3-variants-disassembly.txt  memory_map.txt  msr-writes  offsets.txt  osx.txt  pe.txt  windows-details.txt  winxpsp2-nopae-exports.txt  winxpsp2-nopae-offsets.txt  winxpsp2-pae-exports.txt  winxpsp2-pae-offsets.txt  xen-release-dates.txt
pyvmi/: MANIFEST.in  README  pyvmiaddressspace.py  setup.py  tox.ini
pyvmi/examples/: process-list.py
pyvmi/pyvmi/: __init__.py  exceptions.py  interface.h  interface.py  libvmi.py  pyvmi.py
pyvmi/tests/: test_libvmi.py  test_pyvmi.py
tests/: CMakeLists.txt  Makefile.am  check_libvmi.c  check_runner.c  check_tests.h  ntkrnlpa.pdb.bd8f451f3e754ed8a34b50560ceb08e31.rekall.json  ntoskrnl.pdb.32962337f0f646388b39535cd8dd70e82.rekall.json  run_tests.sh  test_accessor.c  test_cache.c  test_getvapages.c  test_init.c  test_peparse.c  test_print.c  test_read.c  test_shm_snapshot.c  test_translate.c  test_util.c  test_write.c
tools/: CMakeLists.txt
tools/64bit-patch/: README  xenaccess.x86_64.patch
tools/config-editor/: README  (+1 more)
tools/vmifs/: CMakeLists.txt  Makefile.am  vmifs.c
xenaccess/: Makefile.am  linux_core.c  linux_memory.c  linux_symbols.c  windows_core.c  windows_peparse.c  windows_process.c  xa_cache.c  xa_core.c  xa_domain_info.c  xa_error.c  xa_file.c  xa_memory.c  xa_private.h  xa_symbols.c  xa_util.c  xenaccess.h.in
xenaccess/config/: Makefile.am  config_parser.h  lexicon.l
(+59 files in other folders)
